Migrate ignore persistence to async MySQL cache